<resources>
    <string name="app_name">ProCalc</string>

    <!-- Dados Antropométricos -->
    <!-- Idade -->
    <string name="txt_idade">Idade</string>
    <string name="hint_idade">Idade (Anos)</string>

    <!-- Altura -->
    <string name="txt_Altura">Altura</string>
    <string name="unidade_Altura">cm</string>
    <string name="hint_Altura">Altura (cm)</string>

    <!-- Peso -->
    <string name="txt_Peso">Peso</string>
    <string name="unidade_Peso">kg</string>
    <string name="hint_Peso">Peso (kg)</string>

    <!-- Botao Calcular -->
    <string name="btn_Calcular">Calcular</string>

    <!-- Menu -->
    <string name="btnSobre">Sobre</string>

    <!-- Activitie Informações -->
    <string name="appDescription">Calculadora de Previstos ou Teóricos para a população Brasileira</string>
    <string name="textoSobre">
        As equações são realizadas de acordo com as equações de Pereira - 1992 {Pneumobil} e Mallozi - 1995
    </string>

    <string name="authorLabel">Autor</string>

    <string name="authorValue">Autor: Dr. Sérgio R. Nacif - Trabalho de Mestrado - Univap 2006</string>

    <string name="fabricaAppUni9">Desenvolvido por: Fábrica de Apps - 2016</string>

    <string name="title_activity_faixas_limite">Informe das Faixas Limite</string>
    <string name="masculino1">6 a 14 anos  115 a 160 cm</string>
    <string name="masculino2">15 a 24 anos  155 a 185 cm</string>
    <string name="masculino3">25 a 78 anos  152 a 182 cm</string>

    <string name="feminino1">6 a 14 anos  116 a 167 cm</string>
    <string name="feminino2">15 a 19 anos  144 a 174 cm</string>
    <string name="feminino3">20 a 76 anos  136 a 170 cm</string>

    <string name="InformeText">As equações de previstos consideram estas 3 faixas etárias e respectivas estaturas.</string>
    <string name="InformeText2">Deve haver cautela para valores fora destas faixas (idades/estatura)</string>

    <!-- outros Textos -->
    <string name="txtPrevisto">Previsto</string>
    <string name="txtLimite">Limite</string>
</resources>
