<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context="espirometria.fabricaapp.uninove.com.br.procalc.activities.MainActivity">

    <!-- Campos Idade e Sexo -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayoutIdadeSexo"
        android:weightSum="5">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="2.3"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:focusable="true"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp">

                <EditText
                    android:id="@+id/txtIdade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_idade"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <!-- Espaçamento ¯\_(ツ)_/¯ -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".7"/>

        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">

            <RadioButton
                android:button="@null"
                android:background="@mipmap/masculine_unchecked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnMasc"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:button="@null"
                android:background="@mipmap/female_unchecked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnFem"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>


    </LinearLayout>

    <!-- Campo Altura -->
    <!-- layout_below posiciona um layout abaixo de outro -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutIdadeSexo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="5"
        android:id="@+id/linearLayoutAltura">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2.3"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtAltura"
                    android:hint="@string/hint_Altura"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <!-- Espaçamento ¯\_(ツ)_/¯ -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".7"/>


        <!-- Campo Peso -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/linearLayoutPeso">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtPeso"
                    android:hint="@string/hint_Peso"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>


    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutPeso"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/btn_Calcular"
            android:id="@+id/btnCalcular"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="120dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/txtPrevisto"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/txtLimite"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"/>
        </TableRow>
    </TableLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lvResultado"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tableLayout" />


</LinearLayout>
